syntax = "proto3";
package rpc;

import "transaction.proto";

option go_package = "gitdc.ee.guardtime.com/alphabill/alphabill/internal/rpc/transaction;transaction";

// Alphabill specific transaction attributes.
message BillTransfer {
  bytes new_bearer = 1;
  uint64 target_value = 2;
  bytes backlink = 3;
}

message TransferDC {
  bytes nonce = 1;
  bytes target_bearer = 2;
  uint64 target_value = 3;
  bytes backlink = 4;
}

message BillSplit {
  uint64 amount = 1;
  bytes target_bearer = 2;
  uint64 remaining_value = 3;
  bytes backlink = 4;
}

message Swap {
  bytes owner_condition = 1;
  repeated bytes bill_identifiers = 2;
  repeated Transaction dc_transfers = 3;
  repeated bytes proofs = 4;
  uint64 target_value = 5;
}
